add content div, re-order page layout, add black garlic facts

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   background-color: lightblue;
 }
 
+#content {
+  margin: 20px;
+  padding: 20px;
+}
+
 #header-img {
   width: 60px;
   height: auto;
