--- a/style.css
+++ b/style.css
@@ -3,9 +3,26 @@ body {
   background-color: lightblue;
 }
 
+h1 {
+  margin: 100px 60px;
+  font-size: 4em;
+}
+
+section {
+  margin: 60px 0 0 0;
+  border: 1px solid orange;
+}
+
+section > * {
+  margin: 0 0 60px 60px;
+  width: 80%;
+  /* border: 2px solid blue; */
+}
+
 #content {
   margin: 20px;
   padding: 20px;
+  border: 1px solid red;
 }
 
 #header-img {
