--- a/style.css
+++ b/style.css
@@ -10,19 +10,24 @@ h1 {
 
 section {
   margin: 60px 0 0 0;
-  border: 1px solid orange;
+  /* border: 1px solid orange; */
 }
 
 section > * {
   margin: 0 0 60px 60px;
   width: 80%;
-  /* border: 2px solid blue; */
+  /* border: 1px solid blue; */
+}
+
+iframe {
+  width: 660px;
+  height: 460px;
 }
 
 #content {
   margin: 20px;
   padding: 20px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 #header-img {
@@ -51,4 +56,10 @@ section > * {
 
 #nav-bar a:hover {
   font-weight: bold;
+}
+
+#videoholder {
+  width: 50%;
+  padding: 20px;
+  margin: 0 auto;
 }
