--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ body {
 }
 
 h1 {
-  margin: 100px 60px;
-  font-size: 4em;
+  margin: 0 0 0 40px;
+  display: inline;
+  font-size: 3em;
 }
 
 section {
@@ -22,6 +23,11 @@ section > * {
 iframe {
   width: 660px;
   height: 460px;
+}
+
+.chunk {
+  width: 80%;
+  background-color: rgb(253,250,252);
 }
 
 #content {
@@ -58,8 +64,23 @@ iframe {
   font-weight: bold;
 }
 
+#facts {
+  padding: 40px;
+}
+
 #videoholder {
   width: 50%;
   padding: 20px;
+  margin: 0 auto;
+}
+
+#formholder {
+  /* width: 460px; */
+  margin: 60px auto;
+  padding: 40px;
+}
+
+#form {
+  width: 50%;
   margin: 0 auto;
 }
