--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
 body {
+  width: 100%;
+  height: 100%;
   color: rgb(5,5,5);
   background-color: lightblue;
+  /* border: 1px solid red; */
+}
+
+header {
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  overflow: hidden;
+  padding: 20px;
+  background-color: lightblue;
+  /* border: 1px solid orange; */
 }
 
 h1 {
-  margin: 0 0 0 40px;
+  margin: 10px 0 0 40px;
   display: inline;
   font-size: 3em;
 }
 
 section {
-  margin: 60px 0 0 0;
-  /* border: 1px solid orange; */
+  margin-top: 160px;
+  /* border: 1px solid yellow; */
 }
 
 section > * {
   margin: 0 0 60px 60px;
   width: 80%;
-  /* border: 1px solid blue; */
 }
 
 iframe {
@@ -33,10 +45,11 @@ iframe {
 #content {
   margin: 20px;
   padding: 20px;
-  /* border: 1px solid red; */
+  /* border: 1px solid blue; */
 }
 
 #header-img {
+  float: left;
   width: 60px;
   height: auto;
 }
@@ -45,10 +58,26 @@ iframe {
   float: right;
   display: inline-block;
   margin: 20px 60px;
+  /* border: 1px solid brown; */
+}
+
+#nav-bar > * {
+  display: inline-block;
+  /* border: 1px solid red; */
+}
+
+#nav-bar img, h1 {
+  float: left;
+}
+
+#nav-bar ul {
+  float: right;
+  margin: 0 60px 0 0;
 }
 
 #nav-bar li {
   display: inline-block;
+  float: left;
   padding: 20px;
   margin-left: 20px;
   border: 1px dotted black;
