--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 header {
   width: 100%;
+  height: 80px;
   position: fixed;
   top: 0px;
   overflow: hidden;
@@ -17,13 +18,13 @@ header {
 }
 
 h1 {
-  margin: 10px 0 0 40px;
-  display: inline;
+  margin: 10px 0 0 90px;
+  display: flex;
   font-size: 3em;
 }
 
 section {
-  margin-top: 160px;
+  margin-top: 140px;
   /* border: 1px solid yellow; */
 }
 
@@ -52,31 +53,23 @@ iframe {
   float: left;
   width: 60px;
   height: auto;
+  display: flex;
 }
 
 #nav-bar {
+  margin: -70px 80px 0 0;
+  min-width: 80px;
   float: right;
-  display: inline-block;
-  margin: 20px 60px;
+  display: flex;
   /* border: 1px solid brown; */
 }
 
-#nav-bar > * {
-  display: inline-block;
-  /* border: 1px solid red; */
-}
-
-#nav-bar img, h1 {
-  float: left;
-}
-
 #nav-bar ul {
-  float: right;
-  margin: 0 60px 0 0;
+  /* margin: 0 80px 0 0; */
 }
 
 #nav-bar li {
-  display: inline-block;
+  display: flex;
   float: left;
   padding: 20px;
   margin-left: 20px;
