--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0px;
   width: 100%;
   height: 100%;
   color: rgb(5,5,5);
@@ -36,6 +37,18 @@ section > * {
 iframe {
   width: 660px;
   height: 460px;
+}
+
+footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  /* clear: both; */
+  margin-top: 10px;
+  padding: 10px 0 0 0;
+  background-color: rgb(253,250,252);
+  /* border: 1px solid yellow; */
 }
 
 .chunk {
@@ -105,4 +118,15 @@ iframe {
 #form {
   width: 50%;
   margin: 0 auto;
+}
+
+#credit {
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  bottom: 0;
+  text-align: center;
+  font-size: .8em;
+  margin: 0;
+  padding: 0;
 }
