--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@media (max-width: 1200px) {
+  iframe {
+    max-width: 100%;
+    max-height: 400px;
+  }
+}
+
+@media (max-width: 800px) {
+  iframe {
+    max-width: 100%;
+    max-height: 300px;
+  }
+}
+
 body {
   margin: 0px;
   width: 100%;
@@ -37,6 +51,7 @@ section > * {
 iframe {
   width: 660px;
   height: 460px;
+  margin: 0 auto;
 }
 
 footer {
@@ -47,13 +62,19 @@ footer {
   /* clear: both; */
   margin-top: 10px;
   padding: 10px 0 0 0;
-  background-color: rgb(253,250,252);
   /* border: 1px solid yellow; */
 }
 
 .chunk {
-  width: 80%;
+  min-width: 80%;
+}
+
+.cream {
   background-color: rgb(253,250,252);
+}
+
+.header-lump {
+  display: inline-block;
 }
 
 #content {
@@ -70,7 +91,7 @@ footer {
 }
 
 #nav-bar {
-  margin: -70px 80px 0 0;
+  margin: 0 80px 0 0;
   min-width: 80px;
   float: right;
   display: flex;
@@ -104,9 +125,11 @@ footer {
 }
 
 #videoholder {
-  width: 50%;
+  width: 80%;
+  margin: 0 auto;
   padding: 20px;
   margin: 0 auto;
+  border: 1px solid blue;
 }
 
 #formholder {
