--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
-@media (max-width: 1200px) {
+@media (max-width: 900px) {
+  header {
+    min-height: 140px;
+  }
   iframe {
     max-width: 100%;
     max-height: 400px;
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 580px) {
+  #nav-bar li {
+    padding: 2px;
+    margin-left: 2px;
+    max-width: 40px;
+  }
   iframe {
     max-width: 100%;
     max-height: 300px;
@@ -18,7 +26,6 @@ body {
   height: 100%;
   color: rgb(5,5,5);
   background-color: lightblue;
-  /* border: 1px solid red; */
 }
 
 header {
@@ -29,7 +36,6 @@ header {
   overflow: hidden;
   padding: 20px;
   background-color: lightblue;
-  /* border: 1px solid orange; */
 }
 
 h1 {
@@ -40,7 +46,6 @@ h1 {
 
 section {
   margin-top: 140px;
-  /* border: 1px solid yellow; */
 }
 
 section > * {
@@ -59,14 +64,8 @@ footer {
   bottom: 0;
   width: 100%;
   height: 30px;
-  /* clear: both; */
   margin-top: 10px;
   padding: 10px 0 0 0;
-  /* border: 1px solid yellow; */
-}
-
-.chunk {
-  min-width: 80%;
 }
 
 .cream {
@@ -80,7 +79,6 @@ footer {
 #content {
   margin: 20px;
   padding: 20px;
-  /* border: 1px solid blue; */
 }
 
 #header-img {
@@ -95,11 +93,6 @@ footer {
   min-width: 80px;
   float: right;
   display: flex;
-  /* border: 1px solid brown; */
-}
-
-#nav-bar ul {
-  /* margin: 0 80px 0 0; */
 }
 
 #nav-bar li {
@@ -125,15 +118,13 @@ footer {
 }
 
 #videoholder {
-  width: 80%;
+  width: 50%;
   margin: 0 auto;
   padding: 20px;
   margin: 0 auto;
-  border: 1px solid blue;
 }
 
 #formholder {
-  /* width: 460px; */
   margin: 60px auto;
   padding: 40px;
 }
